--- a/.env.dev
+++ b/.env.dev
@@ -1,9 +1,9 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
-DB_HOST='localhost'
-DB_DATABASE='draw_With_Me'
-DB_USER='root'
-DB_PASSWORD='root'
+DB_HOST='127.0.0.1'
+ DB_DATABASE='draw_With_Me'
+  DB_USER='root'
+  DB_PASSWORD='root'
 DB_PORT='3306'
 
 APP_PORT=3333
