.env.dev com comentário

--- a/.env.dev
+++ b/.env.dev
@@ -1,10 +1,13 @@
+# Ambiente Local da máquina
 AMBIENTE_PROCESSO=desenvolvimento
 
-DB_HOST='127.0.0.1'
- DB_DATABASE='draw_With_Me'
-  DB_USER='root'
-  DB_PASSWORD='root'
-DB_PORT='3306'
+# Configurações do Banco de Dados para Conexão
+DB_HOST=127.0.0.1
+DB_DATABASE=draw_With_Me
+DB_USER=root
+DB_PASSWORD=root
+DB_PORT=3306
 
+# Configurações da Web para Conexão
 APP_PORT=3333
 APP_HOST=localhost
