.env para virtual ambiente corrigida

--- a/.env
+++ b/.env
@@ -1,10 +1,13 @@
+# Ambiente virtual da Virtual Machine
 AMBIENTE_PROCESSO=producao
 
-DB_HOST='127.0.0.1'
- DB_DATABASE='draw_with_me'
-  DB_USER='aluno'
-  DB_PASSWORD='Sptech#2024'
-DB_PORT='3307'
+# Configurações do Banco de Dados para Conexão
+DB_HOST=127.0.0.1
+DB_DATABASE=draw_with_me
+DB_USER=aluno
+DB_PASSWORD=Sptech#2024
+DB_PORT=3307
 
+# Configurações da Web para Conexão
 APP_PORT=3333
 APP_HOST=localhost
